--- a/templates/all_movies.html
+++ b/templates/all_movies.html
@@ -5,7 +5,7 @@
 {% for movie in movies %}
 <ul>
     <li>
-      <a href="/movie/{{movie.movie_id}}">
+      <a href="/movies/{{movie.movie_id}}">
          {{movie.title}}
       </a>
     </li>
