--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,6 +8,7 @@
   <ul>
     <li><a href="/movies">View all movies</a></li>
     <li><a href="/users">View all users</a></li>
+    <li><a href="/ratings">Rate a movie</a></li>
   </ul>
 
   <h2>Create an Account</h2>
@@ -33,6 +34,21 @@
 
     <p>
       Password <input type="password" name="password">
+    </p>
+
+    <p>
+      <input type="submit">
+    </p>
+  </form>
+
+  <h2>Rate A Movie</h2>
+  <form action="/ratings" method="POST">
+    <p>
+      Movie <input type="text" name="movie">
+    </p>
+
+    <p>
+      Score <input type="text" name="score">
     </p>
 
     <p>
